WIP: This documents the general idea I discussed with njonsson, it builds but receives runtime errors