@@ -1,8 +1,11 @@
 package se.yolean.kafka.keyvalue.kubernetes;
 
+import java.util.ArrayList;
 import java.util.Collection;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.function.BiConsumer;
 import java.util.stream.Collectors;
 
 import javax.enterprise.context.ApplicationScoped;
@@ -15,19 +18,21 @@ import org.slf4j.LoggerFactory;
 
 import io.fabric8.kubernetes.api.model.EndpointAddress;
 import io.fabric8.kubernetes.api.model.Endpoints;
-import io.fabric8.kubernetes.api.model.discovery.v1.Endpoint;
 import io.fabric8.kubernetes.client.KubernetesClient;
 import io.fabric8.kubernetes.client.Watcher;
 import io.fabric8.kubernetes.client.WatcherException;
 import io.quarkus.runtime.Quarkus;
 import io.quarkus.runtime.StartupEvent;
+import se.yolean.kafka.keyvalue.onupdate.UpdatesBodyPerTopic;
 
 @ApplicationScoped
 public class EndpointsWatcher {
 
   private final Logger logger = LoggerFactory.getLogger(EndpointsWatcher.class);
   private List<EndpointAddress> endpoints = List.of();
-  private List<EndpointAddress> unreadyEndpoints = List.of();
+  private Map<EndpointAddress, List<UpdatesBodyPerTopic>> unreadyEndpoints = new HashMap<>();
+
+  private List<BiConsumer<UpdatesBodyPerTopic, Map<String, String>>> onTargetReadyConsumers = new ArrayList<>();
 
   @ConfigProperty(name = "kkv.target.service.name")
   String serviceName;
@@ -43,6 +48,10 @@ public class EndpointsWatcher {
     watch();
   }
 
+  public void addOnReadyConsumer(BiConsumer<UpdatesBodyPerTopic, Map<String, String>> consumer) {
+    onTargetReadyConsumers.add(consumer);
+  }
+
   private void watch() {
     client.endpoints().withName(config.targetServiceName()).watch(new Watcher<Endpoints>() {
       @Override
@@ -52,16 +61,38 @@ public class EndpointsWatcher {
             .map(subset -> subset.getAddresses())
             .flatMap(Collection::stream)
             .distinct()
-            .toList();
+            .collect(Collectors.toList());
 
-        unreadyEndpoints = resource.getSubsets().stream()
+        endpoints.forEach(address -> {
+          if (unreadyEndpoints.containsKey(address)) {
+            emitPendingUpdatesToNowReadyTarget(address, unreadyEndpoints.get(address));
+            unreadyEndpoints.remove(address);
+          }
+        });
+
+        List<EndpointAddress> receivedUnreadyEndpoints = resource.getSubsets().stream()
             .map(subset -> subset.getNotReadyAddresses())
             .flatMap(Collection::stream)
             .distinct()
-            .toList();
+            .collect(Collectors.toList());
+
+        var pendingRemoves = unreadyEndpoints.keySet();
+        receivedUnreadyEndpoints.forEach(address -> {
+          if (!unreadyEndpoints.containsKey(address)) {
+            unreadyEndpoints.put(address, List.of());
+          } else {
+            pendingRemoves.add(address);
+          }
+        });
+
+        for (var address : pendingRemoves) {
+          unreadyEndpoints.remove(address);
+        }
 
         logger.debug("endpoints watch received action: {}", action.toString());
-        logger.debug("Available unready targets: {}", mapEndpointsToTargets(unreadyEndpoints));
+        logger.debug("Received unready targets: {}", mapEndpointsToTargets(receivedUnreadyEndpoints));
+
+        logger.info("Set new unready targets: {}", mapEndpointsToTargets(new ArrayList<EndpointAddress>(unreadyEndpoints.keySet())));
         logger.info("Set new targets: {}", mapEndpointsToTargets(endpoints));
       }
 
@@ -75,8 +106,27 @@ public class EndpointsWatcher {
     });
   }
 
+  private void emitPendingUpdatesToNowReadyTarget(EndpointAddress address, List<UpdatesBodyPerTopic> updates) {
+    // I guess I wanna tell UpdatesDispatcherWebClient to send this now?
+    logger.debug("TODO Send updates to address: {}, {}", address, updates);
+    if (updates.size() == 0) return;
+
+    var mergedUpdate = UpdatesBodyPerTopic.merge(updates);
+    logger.debug("Merged update result {}", mergedUpdate);
+
+    onTargetReadyConsumers.forEach(consumer -> {
+      consumer.accept(mergedUpdate, Map.of(address.getIp(), address.getTargetRef().getName()));
+    });
+  }
+
   public Map<String, String> getTargets() {
     return mapEndpointsToTargets(endpoints);
+  }
+
+  public void updateUnreadyTargets(UpdatesBodyPerTopic body) {
+    unreadyEndpoints.values().forEach(updates -> {
+      updates.add(body);
+    });
   }
 
   /**
